feat(21): add multi create and new pipes to cities
